# aurelia

./: .env.example  .gitignore  API_DOCUMENTATION.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.build  PROJECT_STRUCTURE.md  README.md  README_CN.md  SSH_KEY_SETUP.md  SSH_TESTING_GUIDE.md  TEST_GUIDE.md  TEST_SERVERS.md  enhanced_monitor.py  interactive_test.sh  monitor_validation.py  note.md  test_autonomous.rs  test_ssh_manual.sh  test_ssh_methods.py  test_tencent_connection.sh
.cargo/: config.toml
.github/workflows/: ci-hybrid.yml  ci.yml  deploy-self-hosted.yml  deploy.yml  release-simple.yml  release.yml
autonomy_core/: Cargo.toml
autonomy_core/src/: autonomous_agent.rs  decision_maker.rs  deployment_commander.rs  health_monitor.rs  lib.rs  recovery_manager.rs  self_replicator.rs  server_config.rs  ssh_deployer.rs  task_scheduler.rs
common/: Cargo.toml
common/src/: lib.rs
config/: servers_prod.json  servers_staging.json  state.json  strategy.json  target_servers.json
deployment_tester/: Cargo.toml
deployment_tester/examples/: run_test.rs
deployment_tester/src/: config.rs  deployer.rs  lib.rs  monitor.rs  test_runner.rs  validator.rs
deployment_tester/tests/: integration_test.rs
docs/: API_TEST_RESULTS.md  AUTONOMOUS_AGENT.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  GITHUB_ACTIONS.md  MONITORING_COMPARISON.md  MULTI_SERVER_DEPLOYMENT.md  PASSWORD_AUTH_GUIDE.md  SERVER_CONFIG_GUIDE.md  SYSTEM_STATUS.md
execution_engine/: Cargo.toml
execution_engine/src/: lib.rs
execution_engine/tests/: deployment_tests.rs
kernel/: Cargo.toml
kernel/examples/: test_ssh_deploy.rs  test_ssh_key.rs  test_tencent_ssh.rs
kernel/src/: main.rs
metamorphosis_engine/: Cargo.toml
metamorphosis_engine/src/: lib.rs
monitoring_service/: Cargo.toml
monitoring_service/src/: aggregator.rs  api.rs  collector.rs  http_server.rs  lib.rs  simple_server.rs  websocket.rs
monitoring_service/static/: dashboard.html
perception_core/: Cargo.toml
perception_core/src/: lib.rs
py/: README.md  api_monitor.py  server_manager.py  simple_monitor_server.py  smart_deploy.py  test_config_integration.py  test_deployment_simple.py  test_password_auth.py  test_server_config.py  test_ssh_connection.py  test_ssh_python.py
reasoning_engine/: Cargo.toml
reasoning_engine/src/: lib.rs
resource_monitor/: Cargo.toml
resource_monitor/src/: lib.rs
runners/: .env.example  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.cn  Dockerfile.cn-alt  Dockerfile.cn-fixed  Dockerfile.prebuilt  Dockerfile.robust  README.md  SETUP_TOKEN_GUIDE.md  build-cn.sh  deploy-cn.sh  deploy-runner-fix.sh  deploy-runner.sh  diagnose.sh  docker-compose.cn.yml  docker-compose.yml  entrypoint-fixed.sh  entrypoint.sh  fix-docker-mirror.sh  fix-network.sh  fix-runner.sh  fix-update-issue.sh  offline-setup.sh  quick-build.sh  quick-deploy.sh  ultimate-fix.sh
scripts/: README.md  build_linux.sh  build_linux_docker.sh  demo_monitoring.sh  deploy.sh  deploy_and_build_remote.sh  direct_deploy.sh  remote_exec.sh  smart_deploy.sh  start_with_monitor.sh  test_pure_rust_deploy.sh  test_release_locally.sh
scripts/config/: test_config.json  test_env.json  test_local.json
scripts/docker/: docker-compose.yml
scripts/test/: run_deployment_test.sh  run_docker_test.sh  run_local_test.sh  run_test.sh  test_deployment.sh
strategy_engine/: Cargo.toml
strategy_engine/src/: lib.rs
survival_protocol/: Cargo.toml
survival_protocol/src/: lib.rs
tests/: test_deployment.rs  test_rust_config.rs  test_rust_deployment.rs
