[workspace]
resolver = "2"
members= [ "autonomy_core", "common", "deployment_tester", "execution_engine","kernel", "metamorphosis_engine", "monitoring_service", "perception_core", "reasoning_engine", "resource_monitor", "strategy_engine", "survival_protocol"]

[workspace.dependencies]
# Central place for common dependencies
tokio = { version = "1", features = ["full"] }
sysinfo = "0.30.12"
reqwest = { version = "0.12.4", features = ["json"] }
tokio-tungstenite = { version = "0.23.1", features = ["rustls-tls-native-roots"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
url = "2.2"
rustls = { version = "0.23.0", features = ["ring"] }
libloading = "0.8"
dotenvy = "0.15"
