[package]
name = "autonomy_core"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
deployment_tester = { path = "../deployment_tester" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
ssh2 = "0.9"
anyhow = "1.0"
async-trait = "0.1"
rand = "0.8"
uuid = { version = "1.4", features = ["v4"] }
sysinfo = { workspace = true }
dirs = "5.0"
base64 = "0.21"

[dev-dependencies]
tempfile = "3.20.0"
