[package]
name = "deployment_tester"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
execution_engine = { path = "../execution_engine" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ssh2 = "0.9"
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = "1.0"
async-trait = "0.1"

[dev-dependencies]
tempfile = "3.8"
clap = { version = "4.4", features = ["derive"] }
