[package]
name = "perception_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "perception_core"
path = "src/lib.rs"

[dependencies]
reqwest = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
futures-util = { workspace = true }
url = { workspace = true }
rustls = { workspace = true }
common = { path = "../common" }
tracing = { workspace = true }
